--- a/.travis.yml
+++ b/.travis.yml
@@ -70,27 +70,6 @@ before_deploy:
 - |
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]
   then
-    sudo apt-get update ; sudo apt-get -y install libfuse-dev libglib2.0-dev cmake git libc6-dev binutils fuse # debian, Ubuntu
-    git clone https://github.com/probonopd/AppImageKit.git
-    cd AppImageKit && cmake . && make && cd ..
-    mkdir -p Neutrino.AppDir/usr
-    cp -r build_dir/lib build_dir/bin Neutrino.AppDir/usr
-    cp AppImageKit/AppRun Neutrino.AppDir
-    cp resources/icons/icon.png resources/linuxPackage/Neutrino.desktop Neutrino.AppDir
-    mkdir -p Neutrino.AppDir/usr/lib/qt5
-  fi
-- |
-  if [[ "$TRAVIS_OS_NAME" == "linux" ]]
-  then
-    set -v
-    cp -r ${Qt5_DIR}/../../../plugins Neutrino.AppDir/usr/lib/qt5
-    sudo apt-get install -y pax-utils
-    lddtree Neutrino.AppDir/usr/bin/Neutrino | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
-    lddtree Neutrino.AppDir/usr/lib/qt5/plugins/platforms/libqxcb.so | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
-    lddtree Neutrino.AppDir/usr/lib/libPythonQt.so | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
-    rm -rf Neutrino
-    export RELEASE_FILE=Neutrino-`git describe --abbrev=0 --tags`.AppImage
-    ./AppImageKit/AppImageAssistant Neutrino.AppDir ${RELEASE_FILE}
   fi
 
 deploy:
@@ -103,3 +82,5 @@ deploy:
   overwrite: true
   on:
     tags: true
+  exclude:
+    - os: linux
