--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ matrix:
   include:
     - os: osx
       osx_image: xcode7.3
-    - os: linux
-      dist: trusty
-      sudo: required
+#    - os: linux
+#      dist: trusty
+#      sudo: required
 
 before_install:
 - |
@@ -67,10 +67,6 @@ before_deploy:
     export RELEASE_FILE=Neutrino.dmg
     ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon ./resources/icons/icon.icns --background ./resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 ${RELEASE_FILE} dmg
   fi
-- |
-  if [[ "$TRAVIS_OS_NAME" == "linux" ]]
-  then
-  fi
 
 deploy:
   provider: releases
@@ -82,5 +78,3 @@ deploy:
   overwrite: true
   on:
     tags: true
-  exclude:
-    - os: linux
