--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,8 @@ elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 endif()
 
 set (CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/resources/cmake)
+set (NEUTRINO_ROOT ${CMAKE_CURRENT_LIST_DIR})
+set (NPHYS_PATH ${CMAKE_CURRENT_BINARY_DIR}/lib)
 
 include(FindNeutrinoDeps)
 include(FindNeutrinoGuiComponents)
@@ -78,6 +80,7 @@ endif()
 # targets
 add_subdirectory (nPhysImage)
 add_subdirectory (src)
+add_subdirectory (plugins)
 
 ## cpack definitions
 #SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Neutrino")
