--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,7 @@ before_deploy:
 - |
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]
   then
+    make package
     export RELEASE_FILE=Neutrino*.deb
   fi
   
