--- a/.travis.yml
+++ b/.travis.yml
@@ -58,8 +58,9 @@ before_deploy:
 - |
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]
   then
-    make package
-    export RELEASE_FILE=Neutrino*.deb
+    make -C build_dir package
+    ls -l build_dir
+    export RELEASE_FILE=build_dir/Neutrino*.deb
   fi
   
 deploy:
