--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,7 +69,7 @@ list (APPEND SOURCES
     graphics/nLine.cc graphics/nTics.cc graphics/nPoint.cc graphics/nEllipse.cc 
     graphics/spline.cc graphics/qcustomplot.cpp graphics/nCustomPlots.cpp
 
-    pans/nFocalSpot.cc pans/nPhysProperties.cc pans/nVisar.cc pans/nFindPeaks.cc pans/nContours.cc
+    pans/nFocalSpot.cc pans/nPhysProperties.cc pans/nFindPeaks.cc pans/nContours.cc
     pans/nInterpolatePath.cc pans/nOpenRAW.cc pans/nSpectralAnalysis.cc
     pans/colorbar/nHistogram.cc pans/colorbar/nColorBarWin.cc pans/nInterferometry.cc 
     pans/nGhost.cc pans/nMouseInfo.cc pans/nBoxLineout.cc pans/nPreferences.cc 
