--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ matrix:
   include:
     - os: osx
       osx_image: xcode6.4
-    - os: linux
-      dist: trusty
-      sudo: required
+#    - os: linux
+#      dist: trusty
+#      sudo: required
 
 before_install:
 - |
   if [[ "$TRAVIS_OS_NAME" == "osx" ]]
   then
     export MACOSX_DEPLOYMENT_TARGET=10.10
-    export CMAKE_FLAGS='-DCMAKE_CXX_COMPILER=g++-6  -DQt5_DIR=${Qt5_DIR}'
+    export CMAKE_FLAGS='VERBOSE=1 -DCMAKE_CXX_COMPILER=g++-6  -DQt5_DIR=${Qt5_DIR}'
     export Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
     brew update; brew tap homebrew/science
     brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl netpbm
