--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_install:
     export Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
     brew update; brew tap homebrew/science
     brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl netpbm
+    brew link --force gcc
     mdfind -name gsl_math.h
     find /usr/local/Cellar -name gsl_math.h
     brew install fftw --with-openmp
