--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ before_install:
     export Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
     brew update; brew tap homebrew/science
     brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl netpbm
+    ln -sf /usr/lib/libnetpbm.11.75.dylib /usr/lib/libnetpbm.dylib
+    rm /usr/lib/libnetpbm.a    
     brew install fftw --with-openmp
   fi
 - |
@@ -47,7 +49,7 @@ before_install:
 script:
 - mkdir -p build_dir && cd build_dir
 - cmake ${CMAKE_FLAGS} ..
-- make VERBOSE=1
+- make
 - cd ..
 
 install:
