added translation system for plugins

--- a/plugins/Visar/CMakeLists.txt
+++ b/plugins/Visar/CMakeLists.txt
@@ -1,5 +1,5 @@
-get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-PROJECT (${PROJECT_NAME}Plugin CXX)
+get_filename_component(MY_PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+PROJECT (${MY_PROJECT_NAME}Plugin CXX)
 
 cmake_minimum_required (VERSION 3.0)
 
@@ -51,10 +51,52 @@ QT5_WRAP_UI(nUIs ${NEUTRINO_ROOT}/UIs/nLine.ui)
 file(GLOB UIS ${CMAKE_CURRENT_SOURCE_DIR}/*.ui)
 file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
 
+
+SET(Qt5LinguistTools_DIR "${Qt5_DIR}/../Qt5LinguistTools")
+
+find_package(Qt5LinguistTools)
+
+if (Qt5LinguistTools_FOUND)
+  SET(LANGUAGES fr_FR it_IT ko_KP)
+
+  SET(LANGUAGE_TS_FILES)
+  FOREACH(LANGUAGE ${LANGUAGES})
+    SET(TS_FILE "${CMAKE_CURRENT_SOURCE_DIR}/${MY_PROJECT_NAME}_${LANGUAGE}.ts")
+    message(STATUS "Language : ${TS_FILE}")
+    SET(LANGUAGE_TS_FILES ${LANGUAGE_TS_FILES} ${TS_FILE})
+
+    if(EXISTS ${TS_FILE})
+        qt5_add_translation(qm_files ${TS_FILE})
+    else ()
+        qt5_create_translation(qm_files ${SOURCES} ${UIS} ${TS_FILE})
+    endif ()
+
+  ENDFOREACH()
+
+  IF(LANGUAGE_TS_FILES)
+    set(TRANSL_QRC ${CMAKE_CURRENT_BINARY_DIR}/translations.qrc)
+    file(WRITE ${TRANSL_QRC} "<RCC>\n    <qresource prefix=\"/translations/\">\n")
+    foreach(my_file ${qm_files})
+        file(RELATIVE_PATH my_file_relative_path ${CMAKE_CURRENT_BINARY_DIR} ${my_file})
+        file(APPEND ${TRANSL_QRC} "        <file>${my_file_relative_path}</file>\n")
+    endforeach()
+    file(APPEND ${TRANSL_QRC} "    </qresource>\n</RCC>")
+    list(LENGTH LANGUAGE_TS_FILES LIST_LENGTH)
+    message(STATUS "${LIST_LENGTH} translation files: ${TRANSL_QRC}")
+
+    qt5_add_resources(RES_SOURCES ${TRANSL_QRC})
+  ENDIF(LANGUAGE_TS_FILES)
+
+
+endif(Qt5LinguistTools_FOUND)
+
 QT5_WRAP_UI(nUIs ${UIS})
 
+
+
+
 # add sources here
-add_library (${PROJECT_NAME} SHARED ${SOURCES} ${nUIs})
+add_library (${PROJECT_NAME} SHARED ${SOURCES} ${nUIs} ${RES_SOURCES})
 
 IF(APPLE)
      set (CMAKE_SHARED_LINKER_FLAGS "-undefined dynamic_lookup")
