--- a/plugins/OpenHDF5/CMakeLists.txt
+++ b/plugins/OpenHDF5/CMakeLists.txt
@@ -27,7 +27,7 @@ endif (HDF5_FOUND)
 
 if (HDF5_FOUND_COMPLETE)
     get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-    PROJECT (${PROJECT_NAME}Plugin CXX)
+    PROJECT (${PROJECT_NAME} CXX)
 
     cmake_minimum_required (VERSION 3.0)
 
