--- a/plugins/testPlugin/CMakeLists.txt
+++ b/plugins/testPlugin/CMakeLists.txt
@@ -1,5 +1,5 @@
 get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-PROJECT (${PROJECT_NAME}Plugin CXX)
+PROJECT (${PROJECT_NAME} CXX)
 
 cmake_minimum_required (VERSION 3.0)
 
