--- a/plugins/GhostFringes/CMakeLists.txt
+++ b/plugins/GhostFringes/CMakeLists.txt
@@ -4,12 +4,10 @@ if (NOT DEFINED NEUTRINO_ROOT)
 endif()
 
 if (NOT IS_ABSOLUTE ${NEUTRINO_ROOT})
-    message (STATUS "NEUTRINO_ROOT is not absolute, fixing")
-    get_filename_component(${NEUTRINO_ROOT} ${NEUTRINO_ROOT} ABSOLUTE)
+    set (NEUTRINO_ROOT "${CMAKE_BINARY_DIR}/${NEUTRINO_ROOT}")
 endif()
-message (STATUS "neutrino root ${NEUTRINO_ROOT}" )
 
 set (CMAKE_MODULE_PATH ${NEUTRINO_ROOT}/resources/cmake)
 include(NeutrinoPlugin)
-
 ADD_NEUTRINO_PLUGIN()
+
